--- a/MKContactsApp/MKContactsApp.csproj
+++ b/MKContactsApp/MKContactsApp.csproj
@@ -105,6 +105,7 @@
     <Compile Include="Steps\ViewContacts.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utilities\AppiumUtilities.cs" />
+    <Compile Include="Utilities\Base.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Features\AddNewContact.feature" />
